src/snapshots/gitui__gitui__tests__app_worktrees_tab.snap
---
source: src/gitui.rs
expression: terminal.backend()
---
"  Status [1]  |  Log [2]  |  Files [3]  |  Stashing [4]  |  Stashes [5]  |  Worktrees [6] "
" ──────────────────────────────────────────────────────────────────────────────────────── "
"┌Worktrees───────────────────────────────────────────────────────────────────────────────┐"
"│  Path                                           Branch                 HEAD    State   │"
"│* /private/var/folders/yw/cs748ctd6gq03sk_2jccwr master                 [AAAAA] current █"
"│                                                                                        ║"
"│                                                                                        ║"
"│                                                                                        ║"
"│                                                                                        ║"
"│                                                                                        │"
"└────────────────────────────────────────────────────────────────────────────────────────┘"
"Scroll [↑↓] Open [⏎] Next [⇥] Tab [123456] Options [o] Help [h] Quit [^c]                 "
